Bug 1935269: Make HTMLImageElement::NaturalSize() fall back to the default 300x150 concrete object size instead of 0x0. r=layout-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D248150